style.css
h1 {
  color         : red;
  /* font          : 50pt georgia; */
  padding-left  : 0;
  padding-right : 0;
  margin-left   : auto;
  margin-right  : auto;
  display       : block;
  width         : 600px;
  border: 0;
}

html body {
  height: 100%;
  border: 0;
}

body {
  font: 20pt georgia;
  text-align: center;
}

header {
  top: -2px;
  left: -2px;
  height: 100px;
  width: 101%;
  z-index: 10;
  position: fixed;
}

nav {
  left: 3%;
  top: 1%;
  width: 10%;
  height: 50px;
}

a {
  color: #ffff00;
}

/* a:hover { */
  /* color: #00ff00; */
/* } */

#banner {
  width: 101%;
  height: 1000px;
  position: fixed;
  top: -2px;
  left: -2px;
  background: url("./images/maxresdefault.jpg");
  background-size: cover;
}

#banner_text:hover {
  color: rgb(222,66,48);
}

#banner_text {
  position: absolute;
  top: 15.5%;
  left: 25%;
  width: 50%;
  text-align: center;
  color: rgb(250, 255, 0);
}

#banner_pic {
  position: fixed;
  top: -7%;
  width: 101%;
  height: 1000px;
  background: url("./images/stacks.png");
  background-size: cover;
  opacity: 0.3;
  z-index: 9;
}

#content {
  width: 101%;
  position: relative;
  top: 800px;
  left: -8px;
  background: #ebebeb;
  height: 1500px;
}

#content-anchor {
  position: absolute;
  top: -59px;
}

#picture {
  position: relative;
}

#picture-anchor {
  position: absolute;
  top: -59px;
}

#edit-anchor {
  position: absolute;
  top: -50px;
}

#explanation {
  color: blue;
  font: 30pt helvetica;
  text-align: center;
}

#first_math {
  font: 25pt georgia;
  display: block;
  text-align: left;
  padding-top: 10px;
  text-indent: 15px;
}

#mynetwork {
  width: 600px;
  height: 400px;
  border: 1px solid lightgray;
  text-align: left;
}

/* @keyframes courrir { */
  /* 25% {transform: translate(100%, 0%) rotate(90deg); background: yellow; color: rgb(20, 20, 255);} */
  /* 50% {transform: translate(100%, 100%) rotate(180deg); background: red;} */
  /* 75% {transform: translate(0%, 100%) rotate(270deg); background: rgb(50, 250, 50);} */
  /* 100% {transform: translate(0%, 0%) rotate(359deg); background: rgb(50, 50, 100); color: rgb(200, 200, 100);} */
/* } */

/* #myanime { */
  /* width: 100px; */
  /* height: 50px; */
  /* top: 30%; */
  /* left: 40%; */
  /* position: absolute; */
  /* background: cyan; */
  /* animation: courrir 5s linear infinite; */
  /* z-index: 10; */
  /* font: 10pt arial; */
  /* color: rgb(20, 20, 255); */
  /* animation-play-state: running; */
/* } */

/* #myanime:hover { */
  /* background: red; */
  /* animation-play-state: paused; */
/* } */

/* #myanime:hover { */
  /* background: rgb(100, 101, 250); */
  /* color: orange; */
/* } */

ul {
  font-size: 0pt;
  list-style-type: none;
  margin: 0;
  padding-right: 100px;
  background-color: #333;
  overflow: hidden;
}

li {
  float: left;
  background-color: #333;
  font-size: 20pt;
}

.dropdown-content.right-drop {
  position: absolute;
  right: 0;
  margin-right: 100px;
}

li a, .droptbtn {
  color: white;
  display: inline-block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover, .dropdown:hover .dropbtn {
  background-color: red;
  color: white;
}

li.dropdown {
  display: inline-block;
}

.right-li {
  float: right;
}

/* .dropbtn { */
  /* background-color: #af4c50; */
  /* color: white; */
  /* padding: 16px; */
  /* font-size: 16px; */
  /* border: none; */
  /* cursor: pointer; */
/* } */

/* .dropdown { */
  /* position: relative; */
  /* display: inline-block; */
  /* float: left; */
/* } */

.dropdown-content {
  position: absolute;
  display: none;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 12;
}

.dropdown-content a {
  color: black;
  text-align: left;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: #eaeaea;
  color: #14ff32;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: red;
  color: white;
}

#edit-area {
  display: none;
  position: relative;
}

textarea {
  width: 101%;
  height: 200px;
  font-size: 24pt;
}

#edit-btn {
  background-color: rgb(255, 0, 0);
  color: black;
  font-size: 24;
}

#edit-btn span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

#edit-btn span::after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

#edit-btn:hover span {
  padding-right: 25px;
}

#edit-btn:hover span:after {
  opacity: 1;
  right: 0;
}

li a span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

li a span:after {
  content: '\27F9';
  position: absolute;
  opacity: 0;
  top: 0;
  transition: 0.5s;
}

li a:hover span {
  padding-right: 60px;
}

li a:hover span:after {
  opacity: 1;
  right: 0;
}

#node-content {
  text-align: left;
  font-size: 28pt;
  background-color: #e0e0e0;
  padding-top: 20px;
  padding-bottom: 25px;
}

